add relation to responses; change column type; add database timezone
