# domain/responses/user/user.go
@@ -7,3 +7,9 @@ type UserResponse struct {
 	Age             uint   `json:"age"`
 	ProfileImageURL string `json:"profile_image_url"`
 }
+
+type UserRelationsResponse struct {
+	ID       uint   `json:"id"`
+	Email    string `json:"email"`
+	Username string `json:"username"`
+}
